chronicle/src/codegen/snapshots/chronicle__codegen__model__test__from_attr_def_for_attr_file_input.snap
---
source: chronicle/src/codegen/model.rs
expression: input
---
AttributeFileInput {
    typ: String,
}
