chronicle/src/codegen/snapshots/chronicle__codegen__model__test__from_domain_for_file_input.snap
---
source: chronicle/src/codegen/model.rs
expression: input
---
DomainFileInput {
    name: "test",
    attributes: {
        "string": AttributeFileInput {
            typ: String,
        },
    },
    agents: {
        "friend": {
            "string": AttributeFileInput {
                typ: String,
            },
        },
    },
    entities: {},
    activities: {},
}
