chronicle/src/codegen/snapshots/chronicle__codegen__model__test__from_json.snap
---
source: chronicle/src/codegen/model.rs
expression: "ChronicleDomainDef::from_file_model(serde_json::from_str::<DomainFileInput>(json).unwrap()).unwrap()"
---
ChronicleDomainDef {
    name: "chronicle",
    attributes: [
        AttributeDef {
            typ: "stringAttribute",
            primitive_type: String,
        },
    ],
    agents: [
        AgentDef {
            name: "friend",
            attributes: [
                AttributeDef {
                    typ: "stringAttribute",
                    primitive_type: String,
                },
            ],
        },
    ],
    entities: [],
    activities: [],
}
