chronicle/src/codegen/snapshots/chronicle__codegen__model__test__from_str.snap
---
source: chronicle/src/codegen/model.rs
expression: domain
---
ChronicleDomainDef {
    name: "test",
    attributes: [
        AttributeDef {
            typ: "stringAttribute",
            primitive_type: String,
        },
    ],
    agents: [
        AgentDef {
            name: "friend",
            attributes: [
                AttributeDef {
                    typ: "stringAttribute",
                    primitive_type: String,
                },
            ],
        },
    ],
    entities: [
        EntityDef {
            name: "octopi",
            attributes: [
                AttributeDef {
                    typ: "stringAttribute",
                    primitive_type: String,
                },
            ],
        },
        EntityDef {
            name: "the sea",
            attributes: [
                AttributeDef {
                    typ: "stringAttribute",
                    primitive_type: String,
                },
            ],
        },
    ],
    activities: [
        ActivityDef {
            name: "gardening",
            attributes: [
                AttributeDef {
                    typ: "stringAttribute",
                    primitive_type: String,
                },
            ],
        },
    ],
}
