chronicle/src/codegen/snapshots/chronicle__codegen__model__test__from_yaml.snap
---
source: chronicle/src/codegen/model.rs
expression: "ChronicleDomainDef::from_file_model(serde_yaml::from_str::<DomainFileInput>(yaml).unwrap()).unwrap()"
---
ChronicleDomainDef {
    name: "test",
    attributes: [
        AttributeDef {
            typ: "testAttr",
            primitive_type: String,
        },
    ],
    agents: [],
    entities: [],
    activities: [],
}
