chronicle/src/codegen/snapshots/chronicle__codegen__model__test__to_yaml_string.snap
---
source: chronicle/src/codegen/model.rs
expression: input.to_yaml_string().unwrap()
---
"---\nname: test\nattributes:\n  string:\n    typ: String\nagents:\n  friend:\n    string:\n      typ: String\nentities:\n  octopi:\n    string:\n      typ: String\nactivities:\n  gardening:\n    string:\n      typ: String\n"
