chronicle/src/codegen/snapshots/chronicle__codegen__model__test__yaml_from_file.snap
---
source: chronicle/src/codegen/model.rs
expression: domain
---
ChronicleDomainDef {
    name: "chronicle",
    attributes: [
        AttributeDef {
            typ: "bool",
            primitive_type: Bool,
        },
        AttributeDef {
            typ: "int",
            primitive_type: Int,
        },
        AttributeDef {
            typ: "string",
            primitive_type: String,
        },
    ],
    agents: [
        AgentDef {
            name: "friends",
            attributes: [
                AttributeDef {
                    typ: "string",
                    primitive_type: String,
                },
                AttributeDef {
                    typ: "bool",
                    primitive_type: Bool,
                },
                AttributeDef {
                    typ: "int",
                    primitive_type: Int,
                },
            ],
        },
    ],
    entities: [
        EntityDef {
            name: "octopi",
            attributes: [
                AttributeDef {
                    typ: "int",
                    primitive_type: Int,
                },
                AttributeDef {
                    typ: "string",
                    primitive_type: String,
                },
                AttributeDef {
                    typ: "bool",
                    primitive_type: Bool,
                },
            ],
        },
        EntityDef {
            name: "the sea",
            attributes: [
                AttributeDef {
                    typ: "string",
                    primitive_type: String,
                },
                AttributeDef {
                    typ: "int",
                    primitive_type: Int,
                },
                AttributeDef {
                    typ: "bool",
                    primitive_type: Bool,
                },
            ],
        },
    ],
    activities: [
        ActivityDef {
            name: "swim about",
            attributes: [
                AttributeDef {
                    typ: "string",
                    primitive_type: String,
                },
                AttributeDef {
                    typ: "bool",
                    primitive_type: Bool,
                },
                AttributeDef {
                    typ: "int",
                    primitive_type: Int,
                },
            ],
        },
        ActivityDef {
            name: "gardening",
            attributes: [
                AttributeDef {
                    typ: "int",
                    primitive_type: Int,
                },
                AttributeDef {
                    typ: "bool",
                    primitive_type: Bool,
                },
                AttributeDef {
                    typ: "string",
                    primitive_type: String,
                },
            ],
        },
    ],
}
